--- a/DatabasePrep.ipynb
+++ b/DatabasePrep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 95,
    "id": "a23b3c04-d966-411b-8161-0ea16503a1df",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 96,
    "id": "5f865685-b8a5-4b3c-8703-f5f8c84ce345",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 97,
    "id": "300856dc-355b-40e3-a773-7273f5b587ed",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 98,
    "id": "357fb808-4cd6-485d-b77b-3dfb1e798086",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 99,
    "id": "81c99c82-06d9-42c5-a6c0-bf3de8c06e8d",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 100,
    "id": "097a75aa-1990-428a-a3ba-fa0196f0a94d",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 101,
    "id": "4505f933-2d0c-42d6-a6f5-d41275baa2e8",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
    "id": "268bbcc5-6e66-44a7-9aad-35ea28c7f643",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 103,
    "id": "c9aa27a4-5038-4faa-95ca-c6f28bc5dd1c",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 104,
    "id": "68349356-4345-4cc5-a677-d6d1f31bd898",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 105,
    "id": "791d3e49-e3ca-43f0-a1d1-20cdeab2cf2f",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 106,
    "id": "3c91adea-11af-4119-bdc9-d7924d350602",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 107,
    "id": "816d8a7b-4174-4a58-a61a-6c8e3c800196",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 108,
    "id": "260739b4-ef3a-4cdf-b3ce-de963cbbaf99",
    "metadata": {},
    "outputs": [
@@ -441,12 +441,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "09bf1730-bebd-4641-ba84-c0a9a7ead895",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Accommodation cost  Transportation cost  Estimated cost\n",
+      "0                1200.0                600.0          1800.0\n",
+      "1                 800.0                500.0          1300.0\n",
+      "2                1000.0                700.0          1700.0\n",
+      "3                2000.0               1000.0          3000.0\n",
+      "4                 700.0                200.0           900.0\n",
+      "..                  ...                  ...             ...\n",
+      "134              2500.0               2000.0          4500.0\n",
+      "135              5000.0               3000.0          8000.0\n",
+      "136              2000.0               1000.0          3000.0\n",
+      "137              6000.0               2500.0          8500.0\n",
+      "138              7000.0               2500.0          9500.0\n",
+      "\n",
+      "[136 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2[\"Estimated cost\"] = df2[\"Accommodation cost\"] + df2[\"Transportation cost\"]\n",
+    "\n",
+    "print(df2[[\"Accommodation cost\", \"Transportation cost\", \"Estimated cost\"]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8bd6cfb-e4f3-4aa4-99a1-70da721c2d53",
+   "metadata": {},
+   "source": [
+    "Now we can merge the estimated costs to the original dataset based on country. Let's first create out function to associate the random costs with country."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "af659014-5980-4e69-a65c-e2586f00acff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2[\"Estimated cost\"] = df2[\"Accommodation cost\"] + df2[\"Transportation cost\"]\n"
+    "import random\n",
+    "\n",
+    "country_costs = df2.groupby(\"Destination\")[\"Estimated cost\"].apply(list).to_dict()\n",
+    "\n",
+    "def get_random_cost(country):\n",
+    "    if country in country_costs:\n",
+    "        base_cost = random.choice(country_costs[country])\n",
+    "        variance = random.uniform(-0.15, 0.15)\n",
+    "        varied_cost = base_cost * (1 + variance)\n",
+    "        return round(varied_cost / 50) * 50\n",
+    "    else:\n",
+    "        return round(random.randint(1000,10000) / 50) * 50"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bac4647a-116c-4d36-89e7-29501dae057a",
+   "metadata": {},
+   "source": [
+    "Next, let's add an \"Estimated cost\" column and apply this to our tourism dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "896e954e-3342-487b-9f83-0704d3aa0cf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Country  Estimated cost\n",
+      "0      India            7700\n",
+      "1        USA            2100\n",
+      "2     Brazil             200\n",
+      "3     Brazil             200\n",
+      "4     France             950\n",
+      "...      ...             ...\n",
+      "5984     USA            3500\n",
+      "5985  France             850\n",
+      "5986   Egypt             900\n",
+      "5987   Egypt             900\n",
+      "5988  France             900\n",
+      "\n",
+      "[5989 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1[\"Estimated cost\"] = df1[\"Country\"].apply(get_random_cost)\n",
+    "\n",
+    "print(df1[[\"Country\", \"Estimated cost\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "78f5428f-c4ef-4321-9fef-14ebad1fe444",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country\n",
+      "Egypt        912\n",
+      "India        896\n",
+      "France       857\n",
+      "USA          848\n",
+      "Brazil       840\n",
+      "Australia    830\n",
+      "China        806\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df1[\"Country\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "a35ff476-b753-4e48-a75a-bdd466571f0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Estimated cost\n",
+       "7050    11\n",
+       "3300    11\n",
+       "6800    11\n",
+       "7000    10\n",
+       "3350    10\n",
+       "        ..\n",
+       "2350     1\n",
+       "2950     1\n",
+       "5000     1\n",
+       "8500     1\n",
+       "7700     1\n",
+       "Name: count, Length: 180, dtype: int64"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1[df1[\"Country\"] == \"USA\"][\"Estimated cost\"].value_counts()"
    ]
   }
  ],
